--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.pythonPath": "C:\\Users\\AbdelrahmanMoharram\\Desktop\\jobs\\Scripts\\python.exe"
+	"python.pythonPath": "/bin/python3"
 }
